fixed navbar not showing correctly

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -33,30 +33,36 @@ body {
   @apply text-base font-semibold bg-primary py-3 px-8 rounded-full hover:shadow-xl hover:opacity-80 hover:text-slate-900 transition duration-300 ease-in-out dark:text-slate-200 dark:hover:text-white;
 }
 
+.navbar-fixed {
+  @apply fixed z-[9999] bg-stone-50 opacity-90 backdrop-blur-xs dark:bg-secondary/50;
+  box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
+}
+
 .hamburger-line {
-  @apply w-[30px] h-1 mb-1 bg-secondary dark:bg-slate-200;
+  @apply w-[30px] h-[2px] my-2 block bg-secondary dark:bg-slate-200;
 }
 
-.hamburger-active > span:nth-child(1) {
-  @apply scale-0;
-}
-
-.hamburger-active > span:nth-child(2) {
+.hamburger-active>span:nth-child(1) {
   @apply rotate-45;
 }
 
-.hamburger-active > span:nth-child(3) {
-  @apply -rotate-45 mt-[19px];
+.hamburger-active>span:nth-child(2) {
+  @apply scale-0;
 }
+
+.hamburger-active>span:nth-child(3) {
+  @apply -rotate-45;
+}
+
 
 .navbar-animate {
   @apply transition duration-500 ease-in-out absolute;
 }
 
-.navbar-fixed {
-  @apply fixed bg-stone-50 opacity-90 backdrop-blur-xs dark:bg-secondary dark:bg-secondary/50;
+/* .navbar-fixed {
+  @apply fixed bg-stone-50 opacity-90 backdrop-blur-xs dark:bg-secondary/50;
   box-shadow: inset 0 -1px 0 0 rgba(0,0,0,0.2);
-}
+} */
 
 .navbar-header {
   @apply absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none dark:bg-secondary dark:shadow-slate-400 lg:dark:bg-transparent;
